# python_boilerplate

./: .gitignore  Pipfile  README.md  main.spec  pyproject.toml
my_project/: __poetryscript__.py  main.py  module.py
src/: inc_dec.py  main.py  module.py  test_module.py  test_unittest.py
tests/: test_module.py
