[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
mypy = "^0.761"
pyinstaller = "^3.6"
pylint = "^2.4.4"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"

[tool.poetry.scripts]
rm-cache = "my_project.__poetryscript__:rm_cache"
rm-spec= "my_project.__poetryscript__:rm_spec"
build = "my_project.__poetryscript__:clean_build"
exe = "my_project.__poetryscript__:run_exe"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
